# note.

./: .gitignore  embed_local.py  index.html  note.py  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  file_ops.rs  lib.rs  main.rs
src/components/: Chatlog.tsx  Composer.tsx  FileGrid.tsx  Mast.tsx  Panels.tsx  ResizeEdges.tsx  TrafficLights.tsx
src/hooks/: useBackend.ts  useDragDrop.ts  useWindowFold.ts
src/lib/: markdown.ts  tauri.ts  time.ts  types.ts
src/styles/: base.css  chat.css  composer.css  files.css  mast.css  panel.css  window.css
