[package]
name = "note-app"
version = "0.1.0"
description = "fully-local macos desktop chat app"
authors = ["you"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "5.0"
uuid = { version = "1.10", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.5"
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.7.0"
